# ParityCheck

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: alerts.py  auth.py  drifts.py  environments.py  ignore_rules.py  observability.py  reports.py  workspaces.py
backend/app/core/: config.py  utils.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  report.py
backend/app/services/: auth.py  drift_engine.py  email.py  encryption.py  github_oauth.py  report_flow.py  slack_alerts.py  workspace.py
backend/app/tasks/: drift.py
backend/scripts/: migrate_github_oauth.sql  migrate_workspaces.sql  setup_db.sh  setup_db.sql
backend/tests/: conftest.py  test_drift_engine.py  test_e2e_api.py
cli/: README.md  pyproject.toml
cli/envguard/: __init__.py  drift.py  main.py
cli/envguard/commands/: analyze.py  check.py  collect.py  compare.py  history.py  report.py  schedule.py
cli/tests/: test_collect.py  test_e2e_cli.py
docs/: AUTH.md  PRODUCTION_UPGRADE.md  README.md  SEO.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnalyzeView.tsx  CodeBlock.tsx  Documentation.tsx  DriftTable.tsx  EnvironmentStatus.tsx  Footer.tsx  (+7 more)
k8s/: backend.yaml  cronjob.yaml  frontend.yaml  namespace.yaml  postgres.yaml
(+12 files in other folders)
