[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "0.1.0"
description = "CLI for environment drift detection - collect, compare, and report to ParityCheck SaaS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ParityCheck"}]
keywords = ["env", "drift", "parity", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.16.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
root-cause = [
    "pipdeptree>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
envguard = "envguard.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["envguard*"]
